--- a/package.json
+++ b/package.json
@@ -6,22 +6,31 @@
     "dev": "next dev -p 3060",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write . --ignore-path .gitignore"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.24.1",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "next": "14.1.0",
+    "octokit": "^3.1.2",
+    "qs": "^6.11.2",
+    "ramda": "^0.29.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.50.1"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/ramda": "^0.29.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
